[package]
name = "maestro"
version = "1.0.0"
description = "Rust SDK for the Maestro Dapp Platform"
repository = "https://github.com/maestro-org/rust-sdk"
documentation = "https://docs.gomaestro.org/"
authors = ["Maestro Team <support@gomaestro.org"]
readme = "README.md"
keywords = ["maestro", "sdk", "rust"]
license = "Apache-2.0"
edition = "2021"
exclude = [".github", ".vscode", ".gitignore"]

[dependencies]
reqwest = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
