[package]
name = "maestro"
version = "1.1.3"
edition = "2021"
license = "Apache-2.0"
edition = "2021"
exclude = [".github", ".vscode", ".gitignore"]

[dependencies]
reqwest = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rust_decimal = "1.34"
serde_qs = "0.12"
chrono = { version = "0.4", features = ["serde"] }
